[package]
name = "line_bot_sdk_rust"
version = "0.1.0"
authors = ["wei.wan <wei.wan@linecorp.com>"]
edition = "2018"

license = "MIT"
description = "LINE Bot SDK in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.114", features = ["derive"]}
serde_json = "1.0.57"
reqwest = { version = "0.10", features = ["blocking", "json"] }