[package]
name = "echo-bot"
version = "0.1.0"
authors = ["wei <wei840222@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde_json = "1.0.57"
line_bot_sdk_rust = { git = "https://github.com/wei840222/line-bot-sdk-rust.git"}